--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -676,8 +676,6 @@ input, select, textarea {
 			}
 
 		.image.main {
-			display: flex;
-			justify-content: center;
 			margin: 2.5rem 0;
 			width: 100%;
 		}
@@ -692,21 +690,43 @@ input, select, textarea {
 				opacity: 1.0;
 			}
 
-		.work-image {
-			width: 50%;
-			height: 50%;
-			align-items: center;
-		}
-
-		.work-image img {
+		.intro-image {
 			width: 70%;
 			border-radius: 20px;
 			opacity: .7;
 			margin-left: 10%;
 		}
 
+		.intro-image img {
+			width: 65%;
+			margin-left: 7%;
+			border-radius: 20px;
+		}
+
+		.work-image {
+			width: 70%;
+			border-radius: 20px;
+			opacity: .7;
+			margin-left: 10%;
+		}
+
+		.work-image img {
+			width: 70%;
+		}
+
 		.work-image img:hover {
 			opacity: 1;
+		}
+
+		.about-image {
+			width: 70%;
+			border-radius: 20px;
+			opacity: .7;
+			margin-left: 10%;
+		}
+
+		.about-image img {
+			width: 80%;
 		}
 
 		@media screen and (max-width: 736px) {
